# projet-poo

./: .gitignore  CMakeLists.txt  Equation.cpp  Equation.h  LaxWendroff.cpp  LaxWendroff.h  Problem.cpp  Problem.h  Script.gnu  Timer.cpp  Timer.h  UniformMesh.cpp  UniformMesh.h  UnitaryTest.cpp  Upwind.cpp  Upwind.h  Variable.cpp  Variable.h  main.cpp  schemas.txt
include/: Equation.hpp  IMesh.hpp  LaxWendroff.hpp  Problem.hpp  UniformMesh.hpp  Upwind.hpp
src/: Equation.cpp  LaxWendroff.cpp  Problem.cpp  Timer.cpp  UniformMesh.cpp  UnitaryTest.cpp  Upwind.cpp  Variable.cpp
